tree-sitter-org/test/corpus/entities.txt
================
Entity — named entity followed by space
================
\alpha text

---

(document
  (zeroth_section
    (paragraph
      (entity)
      (plain_text)
      (newline))))

================
Entity — named entity at end of line
================
\alpha

---

(document
  (zeroth_section
    (paragraph
      (entity)
      (newline))))

================
Entity — named entity with braces suffix
================
\alpha{} text

---

(document
  (zeroth_section
    (paragraph
      (entity)
      (plain_text)
      (newline))))

================
Entity — uppercase name
================
\Rightarrow end

---

(document
  (zeroth_section
    (paragraph
      (entity)
      (plain_text)
      (newline))))

================
Entity — two adjacent entities
================
\alpha\beta text

---

(document
  (zeroth_section
    (paragraph
      (entity)
      (entity)
      (plain_text)
      (newline))))

================
Entity — non-breaking space (backslash-underscore form)
================
\_ text

---

(document
  (zeroth_section
    (paragraph
      (entity)
      (plain_text)
      (newline))))

================
Entity — backslash before digit is plain text
================
\1 not-entity

---

(document
  (zeroth_section
    (paragraph
      (plain_text)
      (newline))))

================
Entity — backslash-underscore not followed by space is plain text
================
\_word

---

(document
  (zeroth_section
    (paragraph
      (plain_text)
      (newline))))

================
Entity — inside bold markup
================
*\alpha*

---

(document
  (zeroth_section
    (paragraph
      (bold
        body: (entity))
      (newline))))

================
Entity — in heading title
================
* Title \alpha here

---

(document
  (heading
    stars: (stars)
    title: (plain_text)
    title: (entity)
    title: (plain_text)))

================
Entity — followed by punctuation
================
\alpha, more

---

(document
  (zeroth_section
    (paragraph
      (entity)
      (plain_text)
      (newline))))
