tree-sitter-org/test/corpus/error_recovery.txt
================
Unclosed bold treated as text
================
This has *unclosed markup on one line.

---

(document
  (zeroth_section
    (paragraph
      (plain_text)
      (bold
        (plain_text)
        (MISSING _MARKUP_CLOSE_BOLD)))))

================
Standalone stars not heading (no space)
================
*not a heading

---

(document
  (zeroth_section
    (paragraph
      (bold
        (plain_text)
        (MISSING _MARKUP_CLOSE_BOLD)))))
