tree-sitter-org/test/corpus/footnotes.txt
================
Footnote reference
================
See footnote [fn:1].

---

(document
  (zeroth_section
    (paragraph
      (plain_text)
      (footnote_reference
        (fn_label))
      (plain_text))))

================
Footnote definition
================
[fn:1] This is the footnote text.

---

(document
  (zeroth_section
    (paragraph
      (footnote_reference
        (fn_label))
      (plain_text))))
