tree-sitter-org/test/corpus/greater_blocks.txt
================
Center block
================
#+begin_center
Centered text.
#+end_center

---

(document
  (zeroth_section
    (center_block
      (paragraph
        (plain_text)))))

================
Quote block
================
#+begin_quote
A wise quote.
#+end_quote

---

(document
  (zeroth_section
    (quote_block
      (paragraph
        (plain_text)))))

================
Special block
================
#+begin_warning
Danger ahead!
#+end_warning

---

(document
  (zeroth_section
    (special_block
      (paragraph
        (plain_text)))))

================
Drawer
================
:MYDRAWER:
Some content in drawer.
:END:

---

(document
  (zeroth_section
    (drawer
      (drawer_name)
      (paragraph
        (plain_text)))))
