tree-sitter-org/test/corpus/headings.txt
================
Level 1 heading
================
* Hello world

---

(document
  (heading
    (stars)
    (plain_text)))

================
Level 2 heading
================
* Parent
** Child

---

(document
  (heading
    (stars)
    (plain_text)
    (heading
      (stars)
      (plain_text))))

================
Heading with TODO keyword
================
* TODO Fix the bug

---

(document
  (heading
    (stars)
    (todo_keyword)
    (plain_text)))

================
Heading with DONE keyword
================
* DONE Completed task

---

(document
  (heading
    (stars)
    (todo_keyword)
    (plain_text)))

================
Heading with priority
================
* [#A] Important task

---

(document
  (heading
    (stars)
    (priority)
    (plain_text)))

================
Heading with tags
================
* Tagged heading :tag1:tag2:

---

(document
  (heading
    (stars)
    (plain_text)
    (tags
      (tag)
      (tag))))

================
Heading with TODO, priority, and tags
================
* TODO [#B] Complete task :work:urgent:

---

(document
  (heading
    (stars)
    (todo_keyword)
    (priority)
    (plain_text)
    (tags
      (tag)
      (tag))))

================
Nested headings three levels
================
* Level 1
** Level 2
*** Level 3

---

(document
  (heading
    (stars)
    (plain_text)
    (heading
      (stars)
      (plain_text)
      (heading
        (stars)
        (plain_text)))))

================
COMMENT heading
================
* COMMENT This is commented out

---

(document
  (heading
    (stars)
    (plain_text)))

================
Heading with body and next sibling
================
* First
Some body text.
* Second

---

(document
  (heading
    (stars)
    (plain_text)
    (section
      (paragraph
        (plain_text))))
  (heading
    (stars)
    (plain_text)))

================
Nested headings then back to parent level
================
* A
** B
** C
* D

---

(document
  (heading
    (stars)
    (plain_text)
    (heading
      (stars)
      (plain_text))
    (heading
      (stars)
      (plain_text)))
  (heading
    (stars)
    (plain_text)))

================
Heading with hyphenated title
================
* Fixed-Width Areas

---

(document
  (heading
    (stars)
    (plain_text)
    (plain_text)
    (plain_text)))
