tree-sitter-org/test/corpus/keywords.txt
================
Title keyword
================
#+TITLE: My Document

---

(document
  (zeroth_section
    (special_keyword
      (keyword_key)
      (keyword_value))))

================
Author keyword
================
#+AUTHOR: Jane Doe

---

(document
  (zeroth_section
    (special_keyword
      (keyword_key)
      (keyword_value))))

================
Multiple keywords
================
#+TITLE: My Doc
#+AUTHOR: Jane
#+DATE: 2024-01-01

---

(document
  (zeroth_section
    (special_keyword
      (keyword_key)
      (keyword_value))
    (special_keyword
      (keyword_key)
      (keyword_value))
    (special_keyword
      (keyword_key)
      (keyword_value))))

================
Zeroth and heading special keywords
================
# Comment in zeroth section
#+TODO: SPECIAL KEYWORD
* Heading
#+TODO: This is treated as a special keyword

---

(document
  (zeroth_section
    (comment)
    (special_keyword
      (keyword_key)
      (keyword_value)))
  (heading
    (stars)
    (plain_text)
    (section
      (special_keyword
        (keyword_key)
        (keyword_value)))))

================
Additional and arbitrary special keywords
================
#+CONSTANTS: pi=3.14
#+MY_CUSTOM_KEY: enabled

---

(document
  (zeroth_section
    (special_keyword
      (keyword_key)
      (keyword_value))
    (special_keyword
      (keyword_key)
      (keyword_value))))

================
Babel call — bare
================
#+call: myfunc()

---

(document
  (zeroth_section
    (babel_call
      name: (call_name))))

================
Babel call — with arguments
================
#+call: double(n=4)

---

(document
  (zeroth_section
    (babel_call
      name: (call_name)
      arguments: (call_arguments))))

================
Babel call — with inside header
================
#+call: myfunc[:exports none]()

---

(document
  (zeroth_section
    (babel_call
      name: (call_name)
      inside_header: (call_inside_header))))

================
Babel call — with outside header
================
#+call: myfunc()[:results output]

---

(document
  (zeroth_section
    (babel_call
      name: (call_name)
      outside_header: (call_outside_header))))

================
Babel call — full form
================
#+call: double[:exports none](n=4)[:results value]

---

(document
  (zeroth_section
    (babel_call
      name: (call_name)
      inside_header: (call_inside_header)
      arguments: (call_arguments)
      outside_header: (call_outside_header))))

================
Babel call — case insensitive keyword
================
#+CALL: myfunc()

---

(document
  (zeroth_section
    (babel_call
      name: (call_name))))
