tree-sitter-org/test/corpus/lesser_blocks.txt
================
Comment block
================
#+begin_comment
This is hidden.
#+end_comment

---

(document
  (zeroth_section
    (comment_block)))

================
Example block
================
#+begin_example
Some example text.
#+end_example

---

(document
  (zeroth_section
    (example_block
      (paragraph
        (plain_text)))))

================
Src block with language
================
#+begin_src python
print("hello")
#+end_src

---

(document
  (zeroth_section
    (src_block
      (language))))

================
Verse block
================
#+begin_verse
Roses are red,
Violets are blue.
#+end_verse

---

(document
  (zeroth_section
    (verse_block
      (paragraph
        (plain_text)
        (plain_text)))))

================
Example block preserves indentation in body lines
================
#+begin_example
verbatim content
  preserved indentation
#+end_example

---

(document
  (zeroth_section
    (example_block
      (paragraph
        (plain_text)
        (plain_text)))))
