tree-sitter-org/test/corpus/links.txt
================
Regular link path only
================
[[/path/to/file]]

---

(document
  (zeroth_section
    (paragraph
      (regular_link
        (link_path)))))

================
Regular link with description
================
[[https://example.com][Click here]]

---

(document
  (zeroth_section
    (paragraph
      (regular_link
        (link_path)
        (plain_text)))))

================
Regular link description with slash characters
================
[[https://orgmode.org][See also https://orgmode.org/worg/ for community docs]]

---

(document
  (zeroth_section
    (paragraph
      (regular_link
        (link_path)
        (plain_text)))))

================
Angle link
================
<https://example.com/path>

---

(document
  (zeroth_section
    (paragraph
      (angle_link
        (link_type)
        (link_path)))))

================
Multiline angle link
================
<https://very-long-domain-name.example.com/with/a/very/long/
path/that/spans/multiple/lines/for/testing/purposes>

---

(document
  (zeroth_section
    (paragraph
      (angle_link
        (link_type)
        (link_path)))))
